--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.3.13",
+    "@tailwindcss/typography": "^0.5.13",
+    "daisyui": "^4.11.1",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-tailwindcss": "^3.17.0",
