--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "latest",
+    "@nuxtjs/supabase": "latest",
     "@nuxtjs/tailwindcss": "latest",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
