feat: implement script to generate types

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint . --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
+    "supabase:gen-types": "bun ./infrastructure/generate-types.ts"
   },
   "dependencies": {
     "@nuxt/eslint": "latest",
