--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@nuxt/eslint": "latest",
     "@nuxtjs/supabase": "latest",
     "@nuxtjs/tailwindcss": "latest",
+    "chart.js": "^4.4.3",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
+    "vue-chartjs": "^5.3.1",
+    "vue-countup-v3": "^1.4.2",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
