--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-tailwindcss": "^3.17.0",
     "eslint-plugin-vue": "^9.26.0",
+    "nuxt-lucide-icons": "^1.0.4",
     "prettier": "^3.2.5"
   }
 }
